<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo2"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:padding="20dp"
        android:background="#A1C51162"
        android:textColor="#0E0606"
        android:textSize="20dp"
        android:textStyle="italic"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/txv_nombre"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/editnombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:inputType="text"
            android:hint="@string/Edit_1"
            android:minHeight="48dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/txv_edad"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/editedad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:inputType="number"
            android:hint="@string/Edit_2"
            android:minHeight="48dp"/>

    </LinearLayout>
    <TextView
        android:id="@+id/tutuloradio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/Edit_3"
        android:paddingLeft="15dp"
        android:textSize="25dp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp">
        <RadioButton
            android:id="@+id/mujer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rd_mujer"
            android:textSize="20dp"/>
        <RadioButton
            android:id="@+id/hombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rd_hombre"
            android:textSize="20dp"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registro"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="30dp"
        android:textSize="25dp">


        <Button
            android:id="@+id/guardardatos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp"
            android:text="@string/btn4" />

        <Button
            android:id="@+id/regresar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp"
            android:text="@string/btn5" />
    </LinearLayout>
</LinearLayout>